<?xml version="1.0"?>
<package format="2">
  <name>ap_ukf</name>
  <version>0.0.1</version>
  <description>UKF based fusion</description>

  <maintainer email="sharma.sanket272@gmail.com">Sanket</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <build_depend>au_core</build_depend> -->
  <build_depend>nav_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <!-- <run_depend>nav_msgs</run_depend>
  <run_depend>rclcpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
